--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,10 @@ article{
 }
 .card-read-more {
   border-top: 1px solid #D4D4D4;
+  background-color: darkslateblue;
+  color: aliceblue;
 }
+
 .card-read-more a {
   text-decoration: none !important;
   padding:10px;
@@ -131,7 +134,7 @@ article{
   height: 300px;
   width: 100%;
   margin-bottom: 25px;
-  background-image: url("./assets/images/bg-masthead.jpg"); 
+  background-image: url("./assets/images/banner.png"); 
   background-size: cover;
   background-position: center;
   position: relative;
