--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,16 +130,6 @@ article{
   text-transform: uppercase
 }
 
-.hero {
-  height: 300px;
-  width: 100%;
-  margin-bottom: 25px;
-  background-image: url("./assets/images/banner.png"); 
-  background-size: cover;
-  background-position: center;
-  position: relative;
-}
-
 .subtitle {
   background-color: #0d486d;
   font-size: 48px;
@@ -159,6 +149,22 @@ img {
   height: auto;
 }
 
+/* The hero image */
+.hero-image {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+
+  /* Set a specific height */
+  height: 300px;
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+/* Place text in the middle of the image */
 .hero-text {
   text-align: center;
   position: absolute;
@@ -167,10 +173,7 @@ img {
   transform: translate(-50%, -50%);
   color: white;
 }
-.hero-hero {
-  height: 300px;
-  width: 100%;
-}
+
 
 
 /*CONTACT LIST STYLING*/ 
