--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,20 @@ img {
   height: auto;
 }
 
+.cord{
+  border-radius: 8px;
+  transition: all 0.5s ease-in-out;
+    position: relative;
+    margin-top: -20px;
+  
+}
+
+.code:hover,
+.code:hover .card-content {
+  box-shadow: inset 0px 0px 8px aliceblue, 0 0 15px aliceblue;
+}
+
+
 /* The hero image */
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
